--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.3
 homepage: https://github.com/Vikaskumar75/Animated-Container
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
